Youtube Demo/src/objects/Release_Tracker__c.object
<CustomObject>
    <fields>
        <fullName>End__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lock__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Lock</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start_Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Planning
Open
QA
Complete</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Planning</fullName>
                </value>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>QA</fullName>
                </value>
                <value>
                    <fullName>Testing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>profiles_to_lock__c</fullName>
        <label>profiles to lock</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Release_Tracker</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Release/Build Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Releases</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>